<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="app_portfolio">App Portfolio</string>
    <string name="button">Popular Movies</string>
    <string name="button2">Stock Hawk</string>
    <string name="button3">Build it Bigger</string>
    <string name="button4">Make Your App Material</string>
    <string name="button5">Go Ubiquitous</string>
    <string name="button6">Capstone</string>
</resources>
