<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bcalabri.appportfolio.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="50sp"
        android:text="@string/app_portfolio"
        android:textAlignment="center" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            app:layout_column="0"
            app:layout_row="1"
            android:layout_row="0"
            android:layout_column="0"
            android:minHeight="60dp"
            android:onClick="onClickButton1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            app:layout_column="0"
            app:layout_row="6"
            android:layout_row="1"
            android:layout_column="0"
            android:minHeight="60dp"
            android:onClick="onClickButton1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            app:layout_column="0"
            app:layout_row="4"
            android:layout_row="2"
            android:layout_column="0"
            android:minHeight="60dp"
            android:onClick="onClickButton1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            app:layout_column="0"
            app:layout_row="4"
            android:layout_row="3"
            android:layout_column="0"
            android:minHeight="60dp"
            android:onClick="onClickButton1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            app:layout_column="0"
            app:layout_row="4"
            android:layout_row="4"
            android:layout_column="0"
            android:minHeight="60dp"
            android:onClick="onClickButton1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            app:layout_column="0"
            app:layout_row="4"
            android:layout_row="5"
            android:layout_column="0"
            android:minHeight="60dp"
            android:onClick="onClickButton1" />

    </GridLayout>

</RelativeLayout>
